--- a/src/AppointmentSystem.Web/Pages/AppointmentForm.razor
+++ b/src/AppointmentSystem.Web/Pages/AppointmentForm.razor
@@ -237,6 +237,9 @@
 
     protected override async Task OnInitializedAsync()
     {
+        // Initialization'ı bekle
+        await AuthState.WaitForInitializationAsync();
+        
         // Login kontrolü
         if (!AuthState.IsAuthenticated)
         {
